stuf/src/p3/tests/t162.err
Semantic error on line 8: Incorrect type (string) for initial value of variable 'some_measurement' of type (double).
